<resources>
    <string name="app_name">scoreKeeper</string>
    <string name="team_a">Team A</string>
    <string name="_11_point">+1 Point</string>
    <string name="_21_point">+2 Point</string>
    <string name="_31_point">+3 Point</string>
    <string name="team_b">Team B</string>
    <string name="_1_point">+1 Point</string>
    <string name="_2_point">+2 Point</string>
    <string name="_3_point">+3 Point</string>
    <string name="reset">reset</string>
    <string name="_01">0</string>
    <string name="_0">0</string>
    <string name="vs">vs</string>
</resources>
