<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/score_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="@dimen/dp_zero"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="@dimen/ly_12">

            <TextView
                style="@style/textStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/team_a" />


            <TextView
                android:id="@+id/TeamAScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/ly_12"
                android:text="@string/_0"
                android:textColor="@android:color/white"
                android:textSize="@dimen/txt_30" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_120"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center_vertical"
            android:text="@string/vs"
            android:textColor="@android:color/white"
            android:textSize="@dimen/txt_30">

        </TextView>

        <LinearLayout
            android:layout_width="@dimen/dp_zero"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="@dimen/ly_12">

            <TextView
                style="@style/textStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/team_b" />

            <TextView
                android:id="@+id/TeamBScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/ly_12"
                android:text="@string/_01"
                android:textColor="@android:color/white"
                android:textSize="@dimen/txt_30" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/score_container"
        android:layout_margin="@dimen/ly_12"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="@dimen/dp_zero"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/onePointTeamA"
                style="@style/buttonStyle"
                android:layout_width="@dimen/dp_120"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_button"
                android:text="@string/_11_point" />

            <Button
                android:id="@+id/twoPointTeamA"
                style="@style/buttonStyle"
                android:layout_width="@dimen/dp_120"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_button"
                android:text="@string/_21_point" />

            <Button
                android:id="@+id/threePointTeamA"
                style="@style/buttonStyle"
                android:layout_width="@dimen/dp_120"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_button"
                android:text="@string/_31_point" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="@dimen/dp_zero"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/onePointTeamB"
                style="@style/buttonStyle"
                android:layout_width="@dimen/dp_120"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_button"
                android:text="@string/_1_point" />

            <Button
                android:id="@+id/twoPointTeamB"
                style="@style/buttonStyle"
                android:layout_width="@dimen/dp_120"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_button"
                android:text="@string/_2_point" />

            <Button
                android:id="@+id/threePointTeamB"
                style="@style/buttonStyle"
                android:layout_width="@dimen/dp_120"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_button"
                android:text="@string/_3_point" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/Reset"
        android:layout_width="@dimen/dp_120"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/ly_12"
        android:background="@drawable/custom_button"
        android:text="@string/reset"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        tools:ignore="OnClick" />

</RelativeLayout>